--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -89,7 +89,7 @@
 }
 
 .contact-footer {
-    width: 90vw;
+    width: 80vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,6 +130,35 @@
 
 //MEDIA QUERIES
 
+ //TABLET
+ 
+ @media (max-width: 769px) and (min-width: 482px){
+    .contact-container {
+        justify-content: space-evenly;
+
+    }
+    .contact-header-wording {
+        font-size: 1.2rem;
+    }
+    .contact-header-wording em {
+        font-size: 1.2rem;
+    }
+    .contact-main-get-in-touch {
+        font-size: 3.5rem;
+        margin-bottom: 5%;
+    }
+    .contact-main-get-in-touch em {
+        font-size: 3rem;
+    }
+    .contact-main-summary {
+        font-size:0.9rem;
+        margin-bottom: 5%;
+    }
+    .contact-main-summary em {
+        font-size:0.9rem;
+    }
+}
+
 //MOBILE
 
 @media (max-width: 481px){
@@ -140,12 +169,13 @@
         justify-content: center;
         margin-bottom: 0px;
         margin-top: 10vh; 
+        flex-direction: column;
     }
     .contact-header-wording {
         font-size: 1rem;
     }
-    .contact-header-wording em {
-        font-size: 1rem;
+    .contact-header-wording-line{
+        margin-left: 0;
     }
     .contact-main-get-in-touch {
         font-size: 2.5rem;
@@ -166,31 +196,3 @@
     }
 }
 
- //TABLET
- 
- @media (max-width: 769px){
-    .contact-container {
-        justify-content: space-evenly;
-
-    }
-    .contact-header-wording {
-        font-size: 1.2rem;
-    }
-    .contact-header-wording em {
-        font-size: 1.2rem;
-    }
-    .contact-main-get-in-touch {
-        font-size: 3rem;
-        margin-bottom: 5%;
-    }
-    .contact-main-get-in-touch em {
-        font-size: 3rem;
-    }
-    .contact-main-summary {
-        font-size:0.9rem;
-        margin-bottom: 5%;
-    }
-    .contact-main-summary em {
-        font-size:0.9rem;
-    }
-}
