--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -102,13 +102,14 @@
  .about-section-summary-p {
      margin-bottom: 1.1rem;
      font-size: 0.8rem;
+     font-weight: 200;
 
     }
  .about-section-summary-h4 {
     margin-bottom: 1.1rem;
     font-size: 0.8rem;
     font-weight: 300;
-    color: $the-dot-docoration-color;
+    color: $secondary-font-color;
 }
 
 
@@ -162,9 +163,6 @@
         flex-direction: column;
         align-items: center;
       }
-    .about-section-header-wording em {
-        font-size: 1.2rem;
-    }
     .about-section-right {
           width:90%;        
     }
