--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -171,13 +171,14 @@
     height: 20%;  
     display: flex;
     align-items: center;
+    justify-content: center;
     border-top: 1px solid #546A93; 
 }
 .projects-individual-tech-body {
     margin:0.5rem;
     font-family: $font-family;
     font-weight: 300;
-    font-size: 0.75rem;
+    font-size: 0.6rem;
     color: $secondary-font-color;
 }
 .projects-individual-tech-body:first-child{
