added background color to the body rather than the app component to remove the white edges on mobile view

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,12 @@
 @import '../src/color.scss';
 
+body {
+  background: $background-color;
+}
+
 .App {
   width: 100%;
   display: inline-block;
-  background: $background-color;
 }
 
 * {
