added margin bottom to the contact footer on mobile design so the icons arent covered by the iphone drag bar

--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -192,7 +192,8 @@
         font-size:0.8rem;
     }
     .contact-footer {
-        margin-top: 10vh;
+        margin-top: 10%;
+        margin-bottom: 5%;
     }
 }
 
