--- a/src/Components/LinkButton/LinkButton.scss
+++ b/src/Components/LinkButton/LinkButton.scss
@@ -2,14 +2,13 @@
 
 .button {
     background-color:$background-color;
-    border: 3px;
-    border-style: solid;
-    border-color: $heading-text-colors;
+    border: 3px solid $heading-text-colors;
     border-radius: 50px;
     color: $the-dot-docoration-color;
 
     font-family: $font-family;
     padding: 10px 32px;
+    // padding: 0.5em 1.5em;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -21,4 +20,15 @@
     &:hover {
         background-color: $heading-text-colors; 
     }
+}
+
+@media  (max-width:480px){
+ .button{
+    padding: 6px 12px;
+    font-size: 0.6rem;
+    border-radius: 10px;
+    border: 2px solid $heading-text-colors;
+
+
+ }
 }
