--- a/src/Components/LinkButton/LinkButton.scss
+++ b/src/Components/LinkButton/LinkButton.scss
@@ -8,7 +8,6 @@
 
     font-family: $font-family;
     padding: 10px 32px;
-    // padding: 0.5em 1.5em;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -27,8 +26,6 @@
     padding: 6px 12px;
     font-size: 0.6rem;
     border-radius: 25px;
-    border: 2px solid $heading-text-colors;
-
-
+    border: 2px solid $heading-text-colors
  }
 }
