--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -9,6 +9,7 @@
     background: $background-color;
 
     width: 100%;
+    margin-top: 10px;
     display: flex;
     align-items: center;
     z-index: 1;
@@ -16,7 +17,7 @@
     padding: 0 5%;
 }
 .navlogo{
-    width: 7%;
+    width: auto;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -41,18 +42,15 @@
 .nav-list-container{
     display: flex;
     align-items: center;
-    height: 100%;
 
 }
 
     .nav-list-item {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    
+
+
         list-style: none;
-        margin: 1rem;
+        margin-left: 1.5rem;
         font-family: $font-family;
         padding: 0%;
 
@@ -91,11 +89,12 @@
 
 @media  (max-width:480px){
     .navlogo {
-        font-size: 1.1rem;
+        font-size: 1rem;
+        margin: 0.7rem;
         
     }
    .nav-list-item {
-    margin: 0.5rem;
+    margin: 0.7rem;
 
 
         .nav-link{
@@ -104,7 +103,8 @@
         }
    }
    .header {
-    justify-content: space-around;
+    justify-content: center;
+    padding: 0;
    }
 }    
 //TABLET
