--- a/src/Components/Introduction/Introduction.scss
+++ b/src/Components/Introduction/Introduction.scss
@@ -105,8 +105,9 @@
         align-items: center;
     }
     .intro-main-text-hi {
-        margin-top: 20%;
+        margin-top: 15%;
         font-size: 1rem;
+        margin-bottom: 1%;
     }
     .intro-main-text-hi em{
         font-size: 0.8rem;
@@ -115,12 +116,12 @@
         font-size: 3rem;
     }
     .intro-main-text-role {
-        font-size: 2rem;
+        font-size: 1.9rem;
         margin-bottom: 10%;
-        padding: 0 3%;
+        padding: 0 5%;
     }
     .intro-main-text-summary {
-        font-size: 1rem;
+        font-size: 0.9rem;
         margin-bottom: 10%;
     }
  }
