set the min width of the CV button on the nav bar to 60 px so it still looks a reasonable size on mobile

--- a/src/Components/LinkButton/LinkButton.scss
+++ b/src/Components/LinkButton/LinkButton.scss
@@ -8,6 +8,7 @@
 
     font-family: $font-family;
     padding: 10px 32px;
+    min-width: 60px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
