added future developments to the readme

--- a/src/color.scss
+++ b/src/color.scss
@@ -1,4 +1,4 @@
-$background-color: #061A40;
+$background-color: #27272C;
 $heading-text-colors: #DD6031 ;
 $the-dot-docoration-color: #ffff;
 $secondary-font-color: #DCDCDC;
