aligbned the color and opacity of the fotter border

--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -95,7 +95,7 @@
     align-items: center;
     justify-content: center;
     color: aliceblue;
-    border-top: 1px solid #546A93;
+    border-top: 1px solid rgba(84, 106, 147, 0.3);
     padding: 3%;
     margin-top: 5%;
 }
