--- a/src/color.scss
+++ b/src/color.scss
@@ -5,6 +5,7 @@ $secondary-font-color: #DCDCDC;
 $icon-colors: white;
 $project-background-color :#172A4E;
 $mobile-navbar-background: #e4d8d8;
+$para-color: #ffffff;
 
 // @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700&display=swap');
