added transition ease out to the footer icons

--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -120,6 +120,8 @@
 .contact-footer-icon-individual {
     text-decoration: none;
      color: inherit;
+     transition: ease-out 0.4s;
+
      &:hover{
         color: $heading-text-colors;
     }
