--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -62,6 +62,9 @@
     margin: 1.6rem 0; 
     min-height: 250px;
     min-width: 350px;
+    border-radius: 15px;  
+
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 //IMAGE SECTION
 .projects-individual-image-div {
@@ -87,7 +90,7 @@
     font-family: $font-family;
     width: 100%;
     height: 60%;
-    border-radius: 14px;  
+    border-radius: 15px;  
     background-image: linear-gradient( rgb(8, 8, 8, 1), rgba(255, 255, 255, 0));
 }
 .projects-individual-header-pre-click {
