--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -5,7 +5,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     background: $background-color;
 
     width: 100%;
