--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -19,6 +19,7 @@
     text-align: center;
     display: flex;
     justify-content: center;
+    padding: 5px 0;
     
     cursor: pointer;
 
@@ -26,9 +27,6 @@
     &:hover {
         color:white;
         // font-size: 1.3rem;
-    }
-    .logo-image{
-        width: 70px;
     }
 }
 
@@ -77,7 +75,7 @@
 
 @media  (max-width:480px){
     .logo-image{
-        width: 40px;
+        width: 50px;
     }
    .nav-list-item {
     margin: 0.7rem;
@@ -88,11 +86,13 @@
         
         }
    }
-   .header {
-    justify-content: center;
-    padding: 0;
-   }
+  
 }    
+@media  (min-width:481px){
+    .logo-image{
+        width: 60px;
+    }
+}
 //TABLET
 
 // @media screen and (max-width: 769px) and (min-width: 482px) {
