--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -161,7 +161,8 @@
         align-items: center;
       }
     .about-section-right {
-          width:90%;        
+          width:90%;  
+          margin-top: 5%;      
     }
     .about-section-left {
         width:90%;  
