--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -5,7 +5,6 @@
 .projects-section-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100vw;
     height: auto;
     margin-top: 10vh;
@@ -42,6 +41,25 @@
     opacity: 0.3;
     margin-left: 2%;
     width: 80%;
+}
+
+.project-summary-text{
+    color: white;
+    text-align: left;
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 0.8rem;
+    .word-highlight{
+        color: $heading-text-colors;
+        font-weight: 400;
+        cursor: pointer;
+        text-decoration: underline 0.1em rgba(255, 255, 255, 0);
+        transition: text-decoration-color 300ms;
+        &:hover{
+            text-decoration: underline 0.1em rgba(255, 255, 255, 1);
+        }
+    }
 }
 
 /*PROJECTS INDIVIDUAL CODE*/
@@ -261,6 +279,10 @@
         width: 25%;
         height: 25vh;
         min-width: 80%;
+    }
+    .project-summary-text{
+        padding:0 10%;
+
     }
  }
 
