--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -66,7 +66,12 @@
         } 
     }
     
-
+.nav-menu-icon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
 
 //PHONE
 
