added email, github, protfolio and CV icons with links to the modal. need to add text and style

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -96,7 +96,12 @@
     .nav-list-item-mobile{
         list-style-type: none;
         margin: 0;
-        padding: 0;    }
+        padding: 0;   
+     }
+     .nav-link-mobile {
+        margin-top: 1rem;
+
+     }
 
 //DESKTOP
 
