added padding and border to nav list items

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -67,7 +67,7 @@
     
     
     
-    //NAV MOBILE 
+    //NAV MODAL 
     .nav-menu-icon-container{
         display: flex;
         justify-content: center;
@@ -75,23 +75,21 @@
         color: white;
     }
     
-    .nav-mobile-container{
-        // position: relative;
-        .nav-menu-modal-container{
-            position: absolute;
-            height: 100vh;
-            width: 100vw;
-            top:70px;
-            left: 0;
-            // background-color: $background-color;
-            background-color: red;   
-        }
+   
+    .nav-menu-modal-container{
+        position: absolute;
+        height: 100vh;
+        width: 100vw;
+        top:70px;
+        left: 0;
+        background-color: $background-color;   
     }
+    
 
     .nav-menu-modal-container{
         display: flex;
         flex-direction: column;
-        padding: 0 10%;
+        padding: 0 5%;
     }
     .nav-list-container-mobile{
         width: 100%;
@@ -99,18 +97,16 @@
 
     }
     .nav-list-item-mobile{
+        border-top: 1px solid rgba(#546A93, 0.3);
         list-style-type: none;
         margin: 0;
-        padding: 0;   
+        padding: 1rem 0;   
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
      }
-     .nav-link-mobile {
-        margin-top: 1rem;
-
-     }
+    
      .modal-icon-container{
         display: flex;
         flex-direction: column;
