--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -107,6 +107,9 @@
         justify-content: space-between;
         align-items: center;
      }
+     .nav-list-item-anchor{
+        text-decoration: none;
+     }
     
      .modal-icon-container{
         display: flex;
