added intro section to menu that links to section, added section headers and more headers ro menu to break it down

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -101,7 +101,7 @@
         border-top: 1px solid rgba(#546A93, 0.3);
         list-style-type: none;
         margin: 0;
-        padding: 1rem 0;   
+        padding: 4% 0;   
         display: flex;
         flex-direction: row;
         justify-content: space-between;
