--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -125,7 +125,9 @@
         padding: 0;
         margin: 0;
      }
-   
+   .modal-menu-header{
+    padding-left: 1rem;
+   }
 
 //MEDIA QUERIES
 
