--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -107,7 +107,13 @@
         justify-content: space-between;
         align-items: center;
      }
-     
+     .nav-list-item-mobile:nth-child(1){
+        border-top: 2px solid rgba(#546A93, 0.6);
+     }
+     .nav-list-item-mobile:nth-child(5){
+        border-top: 2px solid rgba(#546A93, 0.6);
+     }
+
      .nav-list-item-anchor{
         text-decoration: none;
      }
