added border bottom to last child, only highlighted the top border between header and menu

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -110,8 +110,11 @@
      .nav-list-item-mobile:nth-child(1){
         border-top: 2px solid rgba(#546A93, 0.6);
      }
-     .nav-list-item-mobile:nth-child(5){
-        border-top: 2px solid rgba(#546A93, 0.6);
+    //  .nav-list-item-mobile:nth-child(5){
+    //     border-top: 2px solid rgba(#546A93, 0.6);
+    //  }
+     .nav-list-item-mobile:last-child{
+        border-bottom: 1px solid rgba(#546A93, 0.3);
      }
 
      .nav-list-item-anchor{
