--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -40,7 +40,7 @@
 
 }
 
-    .nav-list-item-mobile{
+    .nav-list-item-mobile, .nav-list-item{
         display: flex;
         list-style: none;
         margin-left: 1.5rem;
