--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -5,9 +5,8 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     background: $background-color;
-
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
     width: 100%;
     display: flex;
     align-items: center;
