added Icon to introduction section. and laid it out correctly on the menu bar

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -41,6 +41,7 @@
 
     .nav-list-item-mobile, .nav-list-item{
         display: flex;
+        gap: 0.5rem;
         list-style: none;
         margin-left: 1.5rem;
         font-family: $font-family;
@@ -64,7 +65,12 @@
             }
         } 
     }
-    
+    .nav-list-item-mobile-inner-div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
     
     
     //NAV MODAL 
