nth child css selectors are not working now the li's are wrapped inside of the a and link tags. So I gave all li's a border bottom and then the container a thicker border top to give the same effect as selecting the firstchild border top

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -100,6 +100,8 @@
     .nav-list-container-mobile{
         width: 100%;
         padding: 0;
+        border-top: 2px solid rgba(#546A93, 0.5);
+
 
         
     }
@@ -116,15 +118,18 @@
      }
    
 
-     .nav-list-item-mobile:nth-child(1){
-        border-top: 2px solid rgba(#546A93, 0.6);
-     }
+    //  .nav-list-item-mobile:nth-child(1){
+    //     border-top: 2px solid rgba(#546A93, 0.6);
+    //  }
     //  .nav-list-item-mobile:nth-child(5){
     //     border-top: 2px solid rgba(#546A93, 0.6);
     //  }
-     .nav-list-item-mobile:last-child{
-        border-bottom: 1px solid rgba(#546A93, 0.3);
+     .nav-list-item-mobile{
+        border-bottom: 1px solid rgba(#546A93, 0.2);
      }
+    //  .nav-list-item-mobile:first-child{
+    //     border-top: 2px solid rgba(#546A93, 0.6);
+    //  }
     //  .nav-list-item-mobile:nth-child(1n+5){
     //     justify-content: start;
     //     gap: 1rem;
