noticed project header was not aligned with project main section. wrapped header inside main and removes align items center so the text can sit on left

--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -19,13 +19,14 @@
     align-items: center;
     text-align: left;
     margin-top: 10vh; 
+    
 }
 .projects-section-main{
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: auto;
+    flex-direction: column;
 }
 
 /* PROJECTS HEADER WORDING*/
