--- a/src/Components/Introduction/Introduction.scss
+++ b/src/Components/Introduction/Introduction.scss
@@ -26,10 +26,7 @@
     padding: 0px;
     margin: 0px;
 }
-.intro-main-text-name em {
-    color: $heading-text-colors;
-    font-style: normal;
-}
+
 .intro-main-text-role {
     font-family: $font-family;
     font-style: normal;
@@ -40,10 +37,7 @@
     padding: 0px;
     margin: 0px;
 }
-.intro-main-text-role em {
-    color: $heading-text-colors;
-    font-style: normal;
-}
+
 .intro-main-text-summary{
     font-family: $font-family;
     font-style: normal;
@@ -56,7 +50,10 @@
     color: $heading-text-colors;
     font-style: normal;
 }
-
+.span-orange {
+    color: $heading-text-colors;
+    font-style: normal;
+}
 
 //MEDIA QUERIES
 
